<resources>
    <string name="app_name">Twechy-v2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="start">GOT IT</string>
    <string name="next">NEXT</string>
    <string name="help">Help</string>
    <string name="delete_location">Delete Location</string>
    <string name="location_info">LocationInfo</string>
    <string name="city_name">City Name</string>
    <string name="condition">Condition</string>
    <string name="temperature">Temperature</string>
    <string name="weathercondition">weatherCondition</string>
    <string name="enter_city_name">Enter City Name..</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="description">Description</string>
    <string name="go">Go!</string>
    <string name="_30s">30s</string>
    <string name="_0_0">0/0</string>
    <string name="_31_12">31 * 12</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="correct">Correct!!</string>
    <string name="wrong">Wrong</string>
    <string name="play_again">Play Again</string>
    <string name="seconds">30s</string>
    <string name="brian_trainer">Brian Trainer</string>
    <string name="location_tracker">Location Tracker</string>
    <string name="get_started">Get Started</string>
    <string name="count">Count</string>
    <string name="my_markers">My Markers</string>
    <string name="markerLatitude">Latitude</string>
    <string name="markerLongitude">Longitude</string>
    <string name="save_location">Enter Location Name To save</string>
    <string name="get_current_location">get Current Location</string>
    <string name="clear_map">Clear Map</string>
    <string name="zoom_down">Zoom Down</string>
    <string name="zoom_up">Zoom Up</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="brain_trainer">Brain Trainer</string>
    <string name="locations_from_firebase">Locations from Firebase</string>
</resources>
