<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/latitude"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/longitude"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:context="com.twechy.locationtracker.MapsActivity"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <LinearLayout
        android:id="@+id/marker_info_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationName">

        <ImageView
            android:id="@+id/location_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latitude" />

            <TextView
                android:id="@+id/location_lng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Longitude" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/getLocation"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:gravity="center"
        android:onClick="getLocation"
        android:text="Save\nLocation"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <EditText
        android:id="@+id/currentLocationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/search_bar_map"
        android:drawableStart="@mipmap/ic_search_bar"
        android:gravity="center"
        android:hint="@string/save_location"
        android:inputType="text"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageView
        android:id="@+id/navigation_Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/get_current_location"
        android:onClick="navigationUp"
        android:src="@mipmap/ic_map_navigation_up"
        app:layout_constraintBottom_toTopOf="@+id/getLocation"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/getLocation"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationName"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <ImageView
        android:id="@+id/navigation_Down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="navigationDown"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/getLocation"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:srcCompat="@mipmap/ic_map_navigation_down" />

    <TextView
        android:id="@+id/distancetToMarker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/getLocation"
        app:layout_constraintEnd_toStartOf="@+id/getLocation"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/getLocation" />

    <ImageView
        android:id="@+id/zoomDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/zoom_down"
        android:onClick="zoomDown"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationName"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_zoom_down" />

    <ImageView
        android:id="@+id/zoomUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/zoom_up"
        android:onClick="zoomUp"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintStart_toEndOf="@+id/zoomDown"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationName"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_zoom_up" />

    <ImageView
        android:id="@+id/eraseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:onClick="eraseMarkers"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/currentLocation"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:srcCompat="@mipmap/ic_erase"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/exploreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:onClick="displayMarkers"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/eraseBtn"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:srcCompat="@mipmap/ic_explore" />

    <ImageView
        android:id="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        android:onClick="getCurrentLocation"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/navigation_Up"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:srcCompat="@mipmap/ic_current_location" />


</android.support.constraint.ConstraintLayout>
